testsuite/tests/properties/invalid_node_builder/to_builder_non_node/test.lkt
from common import BaseExample, FooNode, Literal

class Example: BaseExample {
    @ignored fun p(): Int = {
        val i = 0;
        val b = i.to_builder();
        b.build()
    }
}
